Fix some macro names in macro env

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -760,8 +760,8 @@
 %
 % \subsubsection{Standard classes}
 % \subsubsubsection{\texttt{article} version}
-% \begin{macro}{\lox@prtc@article}
-%   \begin{macro}{\lox@psttc@article}
+% \begin{macro}{\@lox@prtc@article}
+%   \begin{macro}{\@lox@psttc@article}
 %     \mbox{}
 %    \begin{macrocode}
 \def\@lox@prtc@article{%
@@ -773,8 +773,8 @@
 %  \end{macro}
 % \end{macro}
 % \subsubsubsection{\texttt{report} version}
-% \begin{macro}{\lox@prtc@report}
-%   \begin{macro}{\lox@psttc@report}
+% \begin{macro}{\@lox@prtc@report}
+%   \begin{macro}{\@lox@psttc@report}
 %     \mbox{}
 %    \begin{macrocode}
 \def\@lox@prtc@report{%
@@ -792,8 +792,8 @@
 %  \end{macro}
 % \end{macro}
 % \subsubsubsection{\texttt{book} version}
-% \begin{macro}{\lox@prtc@book}
-%   \begin{macro}{\lox@psttc@book}
+% \begin{macro}{\@lox@prtc@book}
+%   \begin{macro}{\@lox@psttc@book}
 %     \mbox{}
 %    \begin{macrocode}
 \def\@lox@prtc@book{%
@@ -824,8 +824,8 @@
 %    \end{macrocode}
 %  \end{macro}
 %  \subsubsubsection{\texttt{scrartcl} version}
-%  \begin{macro}{\lox@prtc@scrartcl}
-%    \begin{macro}{\lox@psttc@scrartcl}
+%  \begin{macro}{\@lox@prtc@scrartcl}
+%    \begin{macro}{\@lox@psttc@scrartcl}
 %      \mbox{}
 %    \begin{macrocode}
 \def\@lox@prtc@scrartcl{%
@@ -841,8 +841,8 @@
 %  \end{macro}
 % \end{macro}
 % \subsubsubsection{\texttt{scrreprt} version}
-% \begin{macro}{\lox@prtc@scrreprt}
-%   \begin{macro}{\lox@psttc@scrreprt}
+% \begin{macro}{\@lox@prtc@scrreprt}
+%   \begin{macro}{\@lox@psttc@scrreprt}
 %     \mbox{}
 %    \begin{macrocode}
 \def\@lox@prtc@scrreprt{%
@@ -864,8 +864,8 @@
 %  \end{macro}
 % \end{macro}
 % \subsubsubsection{\texttt{scrbook} version}
-% \begin{macro}{\lox@prtc@scrbook}
-%   \begin{macro}{\lox@psttc@scrbook}
+% \begin{macro}{\@lox@prtc@scrbook}
+%   \begin{macro}{\@lox@psttc@scrbook}
 %     \mbox{}
 %    \begin{macrocode}
 \def\@lox@prtc@scrbook{%
