--- a/TODO
+++ b/TODO
@@ -106,4 +106,10 @@ text, but doesn't show comments
 would like to add values to this option (like silent={log,tty,summary,all}
 etc. 
 
-* make innerfallback a choice key
+* Be more protective about the innerfallback and layout/morelayout options
+  Ensure that the layout actually exists.
+  - note that \csname bla\endcsname (or \@nameuse) does not break if the macro
+    is undefined,
+  - we should could use choicekeys for the options, but the alternatives
+    parameter doesn't seem to be dynamic which is boring and will break if I
+    add the possibility for a user to define her own layouts.
