Fix casing in warning messages

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -657,7 +657,7 @@
 %    \begin{macrocode}
 \newcommand\@fxdeprecatedenvwarning[2]{%
   \@fxpkgwarning{%
-    The '#1' environment is deprecated;\MessageBreak
+    the '#1' environment is deprecated;\MessageBreak
     please use '#2' instead}}
 %    \end{macrocode}
 % \end{macro}
@@ -1009,7 +1009,7 @@
 \@fxdefineboolkey[%
   \ifthenelse{\boolean{fx@layout@margin}\and\boolean{fx@layout@marginclue}}{%
     \@fxpkgwarning{%
-      Marginal notes requested;\MessageBreak
+      marginal notes requested;\MessageBreak
       turning marginal clues off}%
     \fx@layout@marginclue{false}}]{%
     layout}{margin}
@@ -1039,7 +1039,7 @@
 \@fxdefineboolkey[%
   \ifthenelse{\boolean{fx@layout@marginclue}\and\boolean{fx@layout@margin}}{%
     \@fxpkgwarning{%
-      Marginal clues requested;\MessageBreak
+      marginal clues requested;\MessageBreak
       turning marginal notes off}%
     \fx@layout@margin{false}}]{%
     layout}{marginclue}
