Remove default value for innerfallback key

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1135,7 +1135,7 @@
 % \begin{option}{innerfallback}
 %     \mbox{}
 %    \begin{macrocode}
-\@fxdefinecmdkey{layout}{innerfallback}[inline]{}
+\@fxdefinecmdkey{layout}{innerfallback}{}
 
 %    \end{macrocode}
 % \end{option}
